Bug 319279 - Krita maxes out memory when too many brushes are added in folder
Summary: Krita maxes out memory when too many brushes are added in folder
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-05-03 15:33 UTC by JayJay
Modified: 2014-06-26 09:24 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description JayJay 2013-05-03 15:33:03 UTC
Krita uses up all physical and swap memory if too many brushes are added in brushes folder.
This happens even when open file dialog is visible and no file is loaded. With less brushes, less ram is used.

Reproducible: Always

Steps to Reproduce:
1. Add many abr files in brushes folder
2. Start Krita
3. The used memory should surge
Actual Results:  
Both swap and physical memory maxes out

Expected Results:  
Krita should be able to deal with a big no. of resources and memory shouldnt max out.

Gimp deals with the same no. of brushes fine. I am not sure if this is even a bug.
Comment 1 Halla Rempt 2013-05-11 11:50:24 UTC
Thanks for the report. We really need to have two-phase loading for brushes and some kind of max number of brushes in memory.
Comment 2 Halla Rempt 2014-06-26 09:24:03 UTC
Git commit ac7b805c7816725baf71300446612b897638582d by Boudewijn Rempt.
Committed on 26/06/2014 at 09:23.
Pushed by rempt into branch 'master'.

Drop the full brush image after loading it to save memory

When we need it for painting, we can reload it.

M  +14   -5    krita/libbrush/kis_brush.cpp
M  +1    -1    krita/libbrush/kis_brush.h
M  +3    -0    krita/libbrush/kis_brush_server.cpp

http://commits.kde.org/calligra/ac7b805c7816725baf71300446612b897638582d