Drop the full brush image after loading it to save memory

When we need it for painting, we can reload it.

BUG:319279