krita/libbrush/kis_brush_server.cpp
@@ -125,6 +125,9 @@ KisBrushServer::KisBrushServer()
     m_brushThread = new KoResourceLoaderThread(m_brushServer);
     m_brushThread->start();
     m_brushThread->barrier();
+    foreach(KisBrushSP brush, m_brushServer->resources()) {
+        brush->setBrushTipImage(QImage());
+    }
 }
 
 KisBrushServer::~KisBrushServer()
